--- a/.env-example
+++ b/.env-example
@@ -15,6 +15,8 @@ MAX_CHARGE_LEVEL=
 APPLY_DAILY_ENERGY=
 APPLY_DAILY_TURBO=
 
+AUTO_CLEAR_MISSION=
+
 RANDOM_TAPS_COUNT=
 SLEEP_BETWEEN_TAP=
 ACTIVE_TURBO_DELAY=
