--- a/.env-example
+++ b/.env-example
@@ -1,27 +1,27 @@
-API_KEY=
+LICENSE_KEY=
 
-MIN_AVAILABLE_ENERGY=
-SLEEP_BY_MIN_ENERGY=
+MIN_AVAILABLE_ENERGY=100
+SLEEP_BY_MIN_ENERGY=[1800, 3600]
 
-ADD_TAPS_ON_TURBO=
+ADD_TAPS_ON_TURBO=2500
 
-AUTO_UPGRADE_TAP=
-MAX_TAP_LEVEL=
-AUTO_UPGRADE_ENERGY=
-MAX_ENERGY_LEVEL=
-AUTO_UPGRADE_CHARGE=
-MAX_CHARGE_LEVEL=
+AUTO_UPGRADE_TAP=True
+MAX_TAP_LEVEL=5
+AUTO_UPGRADE_ENERGY=True
+MAX_ENERGY_LEVEL=5
+AUTO_UPGRADE_CHARGE=True
+MAX_CHARGE_LEVEL=3
 
-APPLY_DAILY_ENERGY=
-APPLY_DAILY_TURBO=
+APPLY_DAILY_ENERGY=True
+APPLY_DAILY_TURBO=True
 
-AUTO_CLEAR_MISSION=
+AUTO_CLEAR_MISSION=True
+AUTO_PLAY_SPIN=False
 
-RANDOM_TAPS_COUNT=
-SLEEP_BETWEEN_TAP=
-ACTIVE_TURBO_DELAY=
+RANDOM_TAPS_COUNT=[15, 100]
+SLEEP_BETWEEN_TAP=[15, 60]
+ACTIVE_TURBO_DELAY=4
 
-USE_TAP_BOT=
-EMERGENCY_STOP=
+USE_TAP_BOT=True
 
-USE_PROXY_FROM_FILE=
+USE_PROXY_FROM_FILE=False
