fix bot always stop and fix for many accounts

--- a/.env-example
+++ b/.env-example
@@ -3,7 +3,7 @@ LICENSE_KEY=
 MIN_AVAILABLE_ENERGY=100
 SLEEP_BY_MIN_ENERGY=[1800, 3600]
 
-ADD_TAPS_ON_TURBO=2500
+ADD_TAPS_ON_TURBO=[50000, 100000]
 
 AUTO_UPGRADE_TAP=True
 MAX_TAP_LEVEL=5
@@ -18,10 +18,11 @@ APPLY_DAILY_TURBO=True
 AUTO_CLEAR_MISSION=True
 AUTO_PLAY_SPIN=False
 
-RANDOM_TAPS_COUNT=[15, 100]
 SLEEP_BETWEEN_TAP=[15, 60]
 ACTIVE_TURBO_DELAY=4
 
 USE_TAP_BOT=True
 
 USE_PROXY_FROM_FILE=False
+DELAY_EACH_ACCOUNT=[10, 15]
+DELAY_ALL_ACCOUNT=[3600, 5000]
